<resources>
    <string name="app_name">極簡課表</string>

    <!-- [Start] Activity Title -->
    <string name="main_activity">課表</string>
    <string name="traffic_schoolMap">地圖</string>
    <string name="courseEditorActivityTitle">課程編輯器</string>
    <string name="title_activity_settings">設定</string>
    <!-- [End] Activity Title -->

    <!-- [Start] Home page menu -->
    <string name="menuAddCourse">新增</string>
    <string name="menuMap">地圖</string>
    <string name="menuCalendar">行事曆</string>
    <string name="menuSettings">設定</string>
    <!-- [End] Home page menu -->

    <!-- [Start] Maps Viewer Fragment -->
    <string name="mapViewer_errorMsgIconDescription">打叉符號的放大鏡</string>
    <string name="mapViewer_notSetTitle">檔案未設定</string>
    <string name="mapViewer_notSetMsg">1. 前往「設定」\n2. 點擊「選擇地圖檔案」\n3. 選擇你的檔案</string>
    <string name="mapViewer_notFoundTitle">找不到檔案</string>
    <string name="mapViewer_notFoundMsg">檔案可能被移動或刪除了，請重新選擇</string>
    <!-- [End] Maps Viewer Fragment -->

    <!-- [Start] Course Viewer -->
    <string name="courseViewer_noClassToday">今天沒課，回去睡覺</string>
    <string name="courseViewer_iconZzzDescription">睡覺的圖案</string>
    <!-- [End] Course Viewer -->

    <!-- [Start] Course Editor -->
    <string name="courseEditor_titleAdd">新增課程</string>
    <string name="courseEditor_titleEdit">編輯課程</string>
    <string name="courseEditor_exitConfirmDialogTitle">捨棄變更</string>
    <string name="courseEditor_exitConfirmDialogMsg">您有變更尚未儲存</string>
    <string name="courseEditor_courseNameTitle">課程名稱</string>
    <string name="courseEditor_courseNameEntry">國文(一)</string>
    <string name="courseEditor_coursePlaceTitle">上課地點</string>
    <string name="courseEditor_coursePlaceEntry">A 棟 101</string>
    <string name="courseEditor_courseProfTitle">授課教師 (選填)</string>
    <string name="courseEditor_courseWeekdayTitle">上課星期</string>
    <string name="courseEditor_courseWeekdayEntry">請選擇</string>
    <string name="courseEditor_courseBeginTitle">開始時間</string>
    <string name="courseEditor_courseBeginEntry">00:00</string>
    <string name="courseEditor_courseEndTitle">結束時間</string>
    <string name="courseEditor_courseEndEntry">00:00</string>
    <string name="courseEditor_noEntry">未填寫</string>
    <!-- [End] Course Editor -->

    <!-- [Start] Course Card Dialog  -->
    <string name="courseCardDialog_title">下好離手</string>
    <string name="courseCardDialog_message">換新學期嗎？\n別刪除了，直接編輯吧！</string>
    <string name="courseCardDialog_editCourseInfo">編輯</string>
    <string name="courseCardDialog_deleteCourse">刪除</string>
    <!-- [End] Course Card Dialog  -->

    <!-- Dialog -->
    <string name="dialogDeleted">已刪除</string>
    <string name="dialogConfirmExit">確定離開?</string>
    <string name="dialogConfirmDelete">確定刪除?</string>
    <string name="dialogPositiveButton">真的</string>
    <string name="dialogNegativeButton">假的</string>

    <!-- [Start] Preference Fragment -->
    <string name="settings_sectionGeneral">一般</string>
    <string name="settings_timetableTitle">課表名稱</string>
    <string name="settings_timetableTitleSummary">我的課表</string>
    <string name="settings_timetableTitleDefaultValue">我的課表</string>
    <string name="settings_themeTitle">選擇主題</string>
    <string name="settings_fabActionTitle">FAB 動作</string>

    <string name="settings_sectionMapCalendar">地圖與行事曆</string>
    <string name="settings_campusMapPickerTitle">選擇地圖檔案</string>
    <string name="settings_campusMapPickerSummary">支援圖片或 PDF</string>
    <string name="settings_campusMapPickerDialogTitle">選擇檔案類型</string>
    <string name="settings_schoolCalendarPickerTitle">選擇行事曆檔案</string>
    <string name="settings_schoolCalendarPickerSummary">支援 PDF</string>
    <string name="settings_mapCalendarHelperTitle">這什麼?</string>
    <string name="settings_mapCalendarHelperMessage">
        1. 這兩個是開啟地圖和行事曆的捷徑，設定後可從主畫面直接開啟。
        \n\n2. 設定後檔案請勿刪除、移動、重命名，以上方法皆會使捷徑失效。
        \n\n3. 圖檔若過大將導致地圖開啟時崩潰，建議轉檔轉小一點。
        \n\n地圖支援：JPG、PNG、PDF\n行事曆支援：PDF
    </string>

    <string name="settings_sectionTimetable">課表</string>
    <string name="settings_notificationBeforeClassTitle">課前通知(開發中)</string>
    <string name="settings_notificationBeforeClassSummary">上課前傳送通知</string>
    <string name="settings_weekendColTitle">顯示週末頁面</string>
    <string name="settings_weekendColSummary">在首頁顯示禮拜六日頁面</string>
    <string name="settings_weekdayLengthLongTitle">顯示完整星期名稱</string>
    <string name="settings_weekdayLengthLongSummary">例如：「星期一」</string>

    <string name="settings_sectionOther">其他</string>
    <string name="settings_contactTitle">聯繫作者</string>
    <string name="settings_contactSummary">Bug 回報、功能請求</string>
    <string name="settings_aboutTitle">關於</string>
    <string name="settings_aboutSummary" translatable="false">Made with ❤ in Taiwan</string>
    <!-- [End] Preference Fragment -->

    <!-- [Start] Preference About Fragment -->
    <string name="prefAbout_versionTitle">版本</string>
    <string name="prefAbout_changelogTitle">更新日誌</string>
    <string name="prefAbout_openSourceTitle">開放原始碼授權</string>
    <string name="prefAbout_termsOfService">服務條款</string>
    <string name="prefAbout_privacyPolicy">隱私權政策</string>
    <string name="prefAbout_license">版權聲明</string>
    <!-- [End] Preference About Fragment -->

    <!-- [Start] Widget -->
    <string name="widget_description">查看今日課程</string>
    <string name="widget_noClassToday">今天沒課</string>
    <string name="widget_stillInBetaMessage">測試版</string>
    <!-- [End] Widget -->

    <!-- [Start] Preference File Message -->
    <string name="fileReadErrorMsg">未知錯誤，請在試一次</string>
    <!-- [End] Preference File Message -->

    <!-- [Start] PDF Error Message -->
    <string name="pdfOpenWithMsg">開啟 PDF 使用…</string>
    <string name="pdfNoAppMsg">找不到可開 PDF 的程式，建議安裝 Google 雲端硬碟</string>
    <string name="pdfFileNotFound">PDF 可能被刪除了，找不到QQ</string>
    <!-- [End] PDF Error Message -->

    <!-- Common -->
    <string name="all_cancel">取消</string>
    <string name="all_confirm">確認</string>
    <string name="all_discard">捨棄</string>
    <string name="all_ohIsError">歐歐，出錯惹</string>
    <string name="all_save">儲存</string>

</resources>
