<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courseeditor.CourseEditorFragment">

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/touchImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBar_loadImgPlsWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mapsViewerFrag"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/linearLayout_errorMessageSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/margin_normal"
            android:contentDescription="@string/mapViewer_errorMsgIconDescription"
            android:src="@drawable/ic_baseline_search_off_24" />

        <TextView
            android:id="@+id/textView_errorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_half"
            android:text="@string/mapViewer_notSetTitle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/textView_errorCause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mapViewer_notSetMsg"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>