<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.txwstudio.app.timetable.ui.courseeditor.CourseEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.courseeditor.CourseEditorFragment">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_courseEditorFrag_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_courseEditorFrag_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:backgroundTint="@color/colorAccentDark"
            android:minWidth="0dp"
            android:paddingHorizontal="@dimen/margin_normal"
            android:text="@string/courseEditor_saveCourse"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_courseEditorFrag_save">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/all_default_margin">

                <!-- Course Name -->
                <TextView
                    android:id="@+id/textView_courseEditor_courseNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/courseEditor_courseNameTitle" />

                <EditText
                    android:id="@+id/editText_courseEditor_courseNameEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/courseEditor_courseNameEntry"
                    android:inputType="text"
                    android:padding="@dimen/all_default_margin"
                    android:text="000" />

                <!-- Course Place -->
                <TextView
                    android:id="@+id/textView_courseEditor_coursePlaceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/courseEditor_coursePlaceTitle" />

                <EditText
                    android:id="@+id/textView_courseEditor_coursePlaceEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/courseEditor_coursePlaceEntry"
                    android:inputType="text"
                    android:padding="@dimen/all_default_margin"
                    android:text="000" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:hint="@string/courseEditor_courseWeekdayTitle">

                    <AutoCompleteTextView
                        android:id="@+id/dropDown_courseEditorFrag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>