<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.txwstudio.app.timetable.ui.courseeditor.CourseEditorViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.courseeditor.CourseEditorFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_courseEditorAct"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|snap" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_courseEditorFrag_save">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/all_default_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_courseEditorAct_courseNameEntry"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/courseEditor_courseNameTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_courseEditorAct_courseNameEntry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.courseName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_courseEditorAct_coursePlaceEntry"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/courseEditor_coursePlaceTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_courseEditorAct_coursePlaceEntry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.coursePlace}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/courseEditor_courseWeekdayTitle">

                    <AutoCompleteTextView
                        android:id="@+id/dropDown_courseEditorAct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_courseEditorAct_courseBeginTimeEntry"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_half"
                        android:layout_weight="1"
                        android:hint="@string/courseEditor_courseBeginTitle"
                        app:endIconDrawable="@drawable/ic_baseline_edit_24"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:id="@+id/textView_courseEditorAct_courseBeginTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_courseEditorAct_courseEndTimeEntry"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_half"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:hint="@string/courseEditor_courseEndTitle"
                        app:endIconDrawable="@drawable/ic_baseline_edit_24"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:id="@+id/textView_courseEditorAct_courseEndTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>